--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
         <h1 class="text2">SONY ALPHA 7R MARK III</h1>
 
         <div class="box3">
-          <h3 class="text3">
+          <h2 class="text3">
             Welcome to Sony A7R3, your ultimate guide to the Sony A7R III
             mirrorless camera. Unleash your creativity with this powerful and
             versatile camera, boasting exceptional image quality and advanced
             features. Explore our in-depth reviews, tutorials, and tips to
             maximize your photography potential with the Sony A7R3.
-          </h3>
+          </h2>
         </div>
         <div id="a7r4" class="box2">
           <div class="item2">
             <img
               src="./images/best-camera-for-beginners-4 copy.jpg"
-              alt=""
+              alt="Sony a7r4fi"
             />
           </div>
           <div class="mark4">
@@ -69,15 +69,15 @@
                 resolution and incredible performance with this cutting-edge
                 camera. Dive into our detailed reviews, tutorials, and expert
                 tips to unleash the full potential of the Sony A7R IV and take
-                your photography to new heights.
-              </h3>
+                your photography to new heights. 
+              </h2>
             </div>
           </div>
         </div>
       </div>
 
       <div class="image-container">
-        <img src="./images/Screenshot tv.png" alt="Image description">
+        <img src="./images/Screenshot tv.png" alt="Sony logo">
       </div>
       
       <section>
@@ -122,7 +122,7 @@
     
         </div>
         <div class="image-right">
-          <img src="./images/Screenshot 2023.png" alt="Right Image" />
+          <img src="./images/Screenshot 2023.png" alt="so" />
         </div>
 
       </section>
