--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
 
     <div class="full-width-image">
-      <img src="./images/Screenshot .png" alt="Full Width Image" />
+      <img src="./images/Screenshot .png" alt="Intro Image of sony" />
     </div>
 
     <main>
@@ -38,7 +38,7 @@
           <div class="item">
             <img
               src="./images/theregisti-VEbUF1BnGkA-unsplash copy.jpg"
-              alt=""
+              alt="Image of sony camera a7r3"
             />
           </div>
         </div>
@@ -57,7 +57,7 @@
           <div class="item2">
             <img
               src="./images/best-camera-for-beginners-4 copy.jpg"
-              alt="Sony a7r4fi"
+              alt="Sony a7r4"
             />
           </div>
           <div class="mark4">
@@ -122,7 +122,7 @@
     
         </div>
         <div class="image-right">
-          <img src="./images/Screenshot 2023.png" alt="so" />
+          <img src="./images/Screenshot 2023.png" alt="sony a7r4" />
         </div>
 
       </section>
@@ -139,7 +139,7 @@
         <p>905-396-(3247)</p>
       </div>
       <div class="footer2">
-        <img src="./images/il_fullxfull.1405058385_4m45 copy.jpg" alt="" />
+        <img src="./images/il_fullxfull.1405058385_4m45 copy.jpg" alt="image of sony ad using front screen" />
       </div>
 
       <div class="copyright">
