--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
      
       
       <div class="logo">
-        <img src="./images/Sony-Logo-Font-1-1 copy.webp" alt="" />
+        <img src="./images/Sony-Logo-Font-1-1 copy.webp" alt="sony logo image" />
       </div>
     </header>
 
